--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.24",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.0.1",
     "mongodb": "^3.2.7",
