--- a/front_framework/router-app/package.json
+++ b/front_framework/router-app/package.json
@@ -10,14 +10,20 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.24",
+    "country-list": "^2.1.1",
+    "jquery": "^3.4.1",
     "mdbvue": "^5.5.1",
     "portal-vue": "^2.1.5",
     "shabnam-font": "^4.0.0",
     "vue": "^2.6.10",
+    "vue-material": "^1.0.0-beta-11",
     "vue-material-rtl": "^0.11.4",
-    "vue-router": "^3.0.1"
+    "vue-multiselect": "^2.1.6",
+    "vue-router": "^3.0.1",
+    "vue-select": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
