--- a/front_framework/router-app/package.json
+++ b/front_framework/router-app/package.json
@@ -21,12 +21,14 @@
     "serve": "^11.0.2",
     "shabnam-font": "^4.0.0",
     "vue": "^2.6.10",
+    "vue-affix": "^0.5.2",
     "vue-dynamic-star-rating": "^1.0.7",
     "vue-material": "^1.0.0-beta-11",
     "vue-material-rtl": "^0.11.4",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.0.1",
     "vue-select": "^3.1.0",
+    "vue-slide-bar": "^1.2.0",
     "vue-star-rating": "^1.6.1"
   },
   "devDependencies": {
@@ -52,6 +54,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -59,8 +62,10 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
