--- a/front_framework/router-app/package.json
+++ b/front_framework/router-app/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.4.1",
     "mdbvue": "^5.5.1",
     "portal-vue": "^2.1.5",
+    "scroll-reaction": "^1.3.3",
     "serve": "^11.0.2",
     "shabnam-font": "^4.0.0",
     "vue": "^2.6.10",
@@ -27,12 +28,14 @@
     "vue-material-rtl": "^0.11.4",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.0.1",
+    "vue-scrollactive": "^0.8.0",
+    "vue-scrollto": "^2.15.0",
     "vue-select": "^3.1.0",
     "vue-slide-bar": "^1.2.0",
     "vue-star-rating": "^1.6.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-plugin-eslint": "^3.9.1",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
